--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /*  your css code here. If applicable */
+.container{
+	display:flex;
+	gap:20px
+}
+img{
+	width:500px;
+	height:200px;
+}
+.hero{
+	align-items: center;
+}
+.btn{
+	background-color:red;
+	color: white;
+	border:none;
+	padding:5px;
+}
